--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "tv",
+  "name": "inform-panel",
   "version": "0.0.0",
   "private": true,
+  "description": "Local-web information system",
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -9,6 +10,12 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "express-messages": "^1.0.1",
+    "express-session": "^1.15.2",
+    "http-errors": "~1.6.3",
+    "mongoose": "^4.11.12",
+    "morgan": "~1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
