--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Local-web information system",
   "scripts": {
-    "start": "NODE_ENV=dev node ./bin/www",
+    "start": "node ./bin/www",
     "test": "mocha --timeout 5000"
   },
   "dependencies": {
