--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Local-web information system",
   "scripts": {
     "start": "NODE_ENV=dev node ./bin/www",
-    "test": "mocha --timeout 5000"
+    "test": "NODE_ENV=test mocha --timeout 5000"
   },
   "dependencies": {
     "config": "^3.3.1",
