--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-fileupload": "^1.1.7-alpha.4",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.2",
     "http-errors": "^1.6.3",
