--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.15.2",
     "http-errors": "^1.6.3",
+    "lodash": "^4.17.19",
     "mongoose": "^5.9.21",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
