--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "config": "^3.3.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cron": "^1.8.2",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-fileupload": "^1.1.7-alpha.4",
