--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "mocha --timeout 5000"
   },
   "dependencies": {
+    "bunyan": "^1.8.14",
     "config": "^3.3.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
